@@ -1,3 +1,11 @@
+2011-03-13 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCast.c (processParms): fixed bug 2084206,
+	  (getLeftResultType): return RESULT_TYPE_GPTR for generic pointers,
+	  (decorateType, CAST): don't change function pointer to CPOINTER
+	  when resulttype is generic pointer, necessary for varargs
+	* support/regression/tests/bug2084206.c: new, added
+
 2011-03-13 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCglobl.h: don't incude stdbool.h if compiled with c++
@@ -8,8 +16,8 @@
 	  Preparations for rematerialization support in new allocator.
 	* src/z80/ralloc.c:
 	  Old register allocator cleanup.
-    * src/z80/gen.c:
-      Code reorganization in preparation of more accurate register allocation.
+	* src/z80/gen.c:
+	  Code reorganization in preparation of more accurate register allocation.
 
 2011-03-09 Philipp Klaus Krause <pkk AT spth.de>
 
@@ -24,7 +32,7 @@
 2011-03-06 Borut Razem <borut.razem AT gmail.com>
 
 	* sim/ucsim/cmd.src/Makefile.in:
-      fixed for bison, byacc and flex version 2.5.4
+        fixed for bison, byacc and flex version 2.5.4
 
 2011-03-05 Philipp Klaus Krause <pkk AT spth.de>
 
